done crud for product table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,17 @@ vat.value=5.0
 
 #swagger
 springdoc.swagger-ui.doc-expansion=none
+
+
+# Multipart File Upload Properties
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
+
+
+
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=false
+spring.web.cors.max-age=3600
