--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,8 @@ spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.url=jdbc:mysql://localhost:3306/rentrodb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.jpa.hibernate.ddl-auto =update
+
+
+# File Storage Properties
+file.upload-dir=C:/Users/click/Desktop/rentroProductImages
+file.base-url=http://localhost:8080/images/
