--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://103.211.202.206:3306/rentrodb?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=admin_mainsite
-spring.datasource.password=Zwoh80#15
+spring.datasource.url=jdbc:mysql://103.211.202.206:3306/admin_rentro_backend?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=admin_rentro_backend
+spring.datasource.password=&51uwzD31
 spring.jpa.hibernate.ddl-auto =update
 
 
 # File Storage Properties
-file.upload-dir=C:/Users/click/Desktop/rentroProductImages
-file.base-url=http://103.211.202.206:8080/images/
+file.upload-dir=C:/inetpub/vhosts/rentro.ae/java.backend.rentro.ae/uploads
+file.base-url=http://rentro.ae/images/
