add manufacturer in Product

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto =update
 
 # File Storage Properties
 file.upload-dir=C:/Users/click/Desktop/rentroProductImages
-file.base-url=http://localhost:8080/images/
+file.base-url=http://192.168.1.14:8080/images/
