adding product successfully

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto =update
 
 # File Storage Properties
 file.upload-dir=C:/inetpub/vhosts/rentro.ae/java.backend.rentro.ae/uploads
-file.base-url=http://rentro.ae/images/
+file.base-url=http://java.backend.rentro.ae/uploads/
