--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,17 @@ spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=false
 spring.web.cors.max-age=3600
+
+
+#Java Mail Sender Properties
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=uzairuddin7470@gmail.com
+spring.mail.password=deghsxbkdstadiac
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+
+
