--- a/src/main/resources/application-prod1.properties
+++ b/src/main/resources/application-prod1.properties
@@ -5,8 +5,8 @@ spring.jpa.hibernate.ddl-auto =update
 
 
 # File Storage Properties
-file.upload-dir=C:/inetpub/vhosts/rentro.ae/backend.rentro.ae/uploads
-file.base-url=http://backend.rentro.ae/uploads/
+file.upload-dir=C:/inetpub/vhosts/rentro.ae/demo.rentro.ae/uploads
+file.base-url=http://demo.rentro.ae/uploads/
 
 #cors config
 #cors.allowed-origins=https://demo.rentro.ae,https://demo.panel.rentro.ae,http://localhost:5173
