--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=rentro
-spring.profiles.active=dev
+spring.profiles.active=railway
 vat.value=5.0
 
 #swagger
@@ -16,8 +16,12 @@ spring.servlet.multipart.max-request-size=15MB
 
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=false
+#spring.web.cors.allow-credentials=true
 spring.web.cors.max-age=3600
+
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 
 #Java Mail Sender Properties
