--- a/src/main/resources/application-railway.properties
+++ b/src/main/resources/application-railway.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://root:xIeJtYLzIeOIIXWPPNolLUHpJAwIFjGE@mysql.railway.internal:3306/railway?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://shuttle.proxy.rlwy.net:50712/railway?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=xIeJtYLzIeOIIXWPPNolLUHpJAwIFjGE
 spring.jpa.hibernate.ddl-auto =update
