add exception handling and add file to railway

--- a/src/main/resources/application-railway.properties
+++ b/src/main/resources/application-railway.properties
@@ -5,8 +5,13 @@ spring.jpa.hibernate.ddl-auto =update
 
 
 # File Storage Properties
-file.upload-dir=/upload
+file.upload-dir=/data/uploads
 file.base-url=https://proud-expression-production-6ebc.up.railway.app/uploads/
 
+# Ensure directories exist
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
 #cors config
 #cors.allowed-origins=https://demo.rentro.ae,https://demo.panel.rentro.ae,http://localhost:5173
