--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,16 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
+# Logging configuration
+logging.level.com.mylstech.rentro=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.file.name=logs/rentro.log
+logging.file.max-size=10MB
+logging.file.max-history=5
+
+# Enable SQL logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 
