--- a/src/main/resources/application-railway.properties
+++ b/src/main/resources/application-railway.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://shuttle.proxy.rlwy.net:50712/railway?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://metro.proxy.rlwy.net:28798/railway?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=xIeJtYLzIeOIIXWPPNolLUHpJAwIFjGE
+spring.datasource.password=IerTRbVUGFFQaIMjJLhbDGSQStierdeD
 spring.jpa.hibernate.ddl-auto =update
 
 
