--- a/src/main/resources/application-railway.properties
+++ b/src/main/resources/application-railway.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://metro.proxy.rlwy.net:28798/railway?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://root:IerTRbVUGFFQaIMjJLhbDGSQStierdeD@mysql.railway.internal:3306/railway?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=IerTRbVUGFFQaIMjJLhbDGSQStierdeD
 spring.jpa.hibernate.ddl-auto =update
