--- a/src/main/resources/application-prod1.properties
+++ b/src/main/resources/application-prod1.properties
@@ -7,3 +7,8 @@ spring.jpa.hibernate.ddl-auto =update
 # File Storage Properties
 file.upload-dir=C:/inetpub/vhosts/rentro.ae/demo.rentro.ae/uploads
 file.base-url=http://demo.rentro.ae/uploads/
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
