add sms service module to send otp its not complete because of no active number in Twilio we can use another sms api like Message central

--- a/src/main/resources/application-prod1.properties
+++ b/src/main/resources/application-prod1.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto =update
 
 # File Storage Properties
 file.upload-dir=C:/inetpub/vhosts/rentro.ae/demo.rentro.ae/uploads
-file.base-url=http://demo.rentro.ae/uploads/
+file.base-url=https://demo.rentro.ae/uploads/
