--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,8 +6,8 @@ spring.jpa.hibernate.ddl-auto =update
 
 # File Storage Properties
 file.upload-dir=C:/Users/click/Desktop/rentroProductImages
-#file.base-url=http://192.168.1.14:8080/uploads/
-file.base-url=${zrok.url}/uploads/
+file.base-url=http://192.168.1.14:8080/uploads/
+#file.base-url=${zrok.url}/uploads/
 
 # Add your development frontend URLs
 #cors.allowed-origins=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000
