successfully added email template

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,3 +76,13 @@ stripe.api.key=sk_test_51RLOsxP9oSOUDJBLGh53kxEXA62PAoFjCCQvLVVX1A04GLbxh2POGnH8
 
 #Zrok link
 zrok.url=https://8jo1qshtyzzh.share.zrok.io
+
+# Thymeleaf Configuration for Email Templates
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+
+# Email Sender Name (optional)
+app.email.sender-name=Rentro Team
