--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,6 +37,9 @@ spring.mail.password=deghsxbkdstadiac
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 
 #Twilio config
 twilio.account-sid=AC647eaf446bad338d25c49f09362ec581
